# baby_math

./: .gitignore  BabyMathConfig.h.in  CMakeLists.txt  build.bat
src/: bmath.cpp  bmath.h  fraction.cpp  fraction.h  main.cpp  manual_tests.h  printv.h  tags
tests/: CMakeLists.txt  bmath_test.cpp  fraction_test.cpp
